fix horizontal scroll

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -135,7 +135,7 @@ body {
   min-height: 100vh;
   /* color: hsl(0, 0%, 6%); */
   color: #000dff;
-  overflow-y: hidden;
+  overflow-y: hidden !important;
   /* overflow-x: hidden; */
   cursor: url("cur.png"), url("cur.cur"), default;
   cursor: url(cur.png), auto;
@@ -1297,6 +1297,7 @@ z-index: 10000;
     font-size: 3.5vw;
     color: white;
     text-transform: none;
+    /* color:rgb(255 255 159); */
     /* padding-left: calc(1.5vw + 1px);
     padding-right: calc(1.5vw + 1px); */
     padding-left: calc(5.5vw + 1px);
@@ -1918,6 +1919,8 @@ width: 100%;
 .row{
   overflow-y: scroll !important;
   height: 100vh;
+  overflow-x: hidden !important;
+  width: 100vw;
 }
 
 .accordion-bral {
@@ -1970,7 +1973,8 @@ width: 100%;
   /* background: #BBB; */
 }
 .accordion-bral input + .ac-label  {
-  /* color: rgb(255 255 159); */
+  /* color: rgb(255 255 159); */mix-blend-mode: difference;
+  
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -1979,8 +1983,8 @@ width: 100%;
 }
 .accordion-bral input:checked + .ac-label,
 .accordion-bral input:checked + .ac-label:active {
-  /* color: #FFF; */
   /* color: rgb(255 255 159); */
+  /* color: rgb(255 255 159); */mix-blend-mode: difference;
   /* mix-blend-mode: difference; */
 }
 .accordion-bral input.ac-input {
@@ -1998,7 +2002,7 @@ width: 100%;
   transition: all 0.3s ease-in-out; */
 }
 .accordion-bral .article p {
-  /* color: #777; */
+  /* color: rgb(255 255 159); */
   /* line-height: 23px; */
   /* font-size: 14px;
   padding: 20px; */
@@ -2192,7 +2196,8 @@ table.ac-table th{
     .topnav a {
       color: white;
       color: rgb(255 255 159);
-      padding: 14px 16px;
+      /* padding: 14px 16px; */
+      padding: 7px 17px;
       text-decoration: none;
       /* font-size: 17px; */
       display: block;
@@ -2281,7 +2286,8 @@ table.ac-table th{
     .topnav a {
       color: white;
       color: rgb(255 255 159);
-      padding: 14px 16px;
+      /* padding: 14px 16px; */
+      padding: 7px 17px;
       text-decoration: none;
       /* font-size: 17px; */
       display: block;
